MongoDB added, initialization and rest endpoints

--- a/reactive-rest-api-client/src/main/resources/application.properties
+++ b/reactive-rest-api-client/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=9091
 reactive.server.url=http://localhost:9090
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=local
